fix buttons align

--- a/src/global.css
+++ b/src/global.css
@@ -31,7 +31,7 @@
   }
 
   .default-button {
-    @apply rounded-lg mas-buttons h-12 border border-c-default;
+    @apply rounded-lg mas-buttons h-12;
   }
 
   .default-tab {
